--- a/FizzBuzz.ipynb
+++ b/FizzBuzz.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN6gFy/OvsAXpte3qrbG+YQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/tleitchColumbia/hw1/blob/main/FizzBuzz.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/hx2406/hw1/blob/main/FizzBuzz.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -34,18 +33,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SMC-bUUN9-gj",
-        "outputId": "5a5f91ff-f9c8-4a99-840f-6fe21529c206"
+        "outputId": "326607e7-6913-4ba4-e19c-c706e7f63154"
       },
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "2170604.056735517"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 1
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1]\n",
+            "[1, 2]\n",
+            "[1, 2, 'fizz', 4]\n",
+            "[1, 2, 'fizz', 4, 5]\n",
+            "[1, 2, 'fizz', 4, 5, 'fizz', 7]\n",
+            "[1, 2, 'fizz', 4, 5, 'fizz', 7]\n"
+          ]
         }
       ],
       "source": [
@@ -62,10 +63,14 @@
         "def FizzBuzz(start, finish):\n",
         "    outlist = []\n",
         "    for i in range(start,finish+1):\n",
+        "      if i%3==0 :\n",
+        "        outlist.append(\"fizz\")\n",
+        "      else :\n",
         "        outlist.append(i)\n",
         "        print(outlist)\n",
         "    return(outlist)\n",
         "\n",
+        "print(FizzBuzz(1,7))\n",
         "\n",
         "# Tools: Append to a list\n",
         "\n",
@@ -73,8 +78,7 @@
         "for i in range(1,5):\n",
         "    myEmptyList.append(i)\n",
         "\n",
-        "print(myEmptyList)\n",
-        ""
+        "print(myEmptyList)\n"
       ]
     }
   ]
